Adding the favicon on Silverpeas pages
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@704 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/index.htm
+++ b/war-core/src/main/webapp/index.htm
@@ -27,6 +27,7 @@
 <html>
 <head>
 <title>Redirection sur la page d'identification</title>
+<link REL="SHORTCUT ICON" HREF="util/icons/favicon.ico">
 <SCRIPT LANGUAGE="JavaScript">
                        <!-- Hide from non-JS Aware Browsers
                        function redirige()
