--- a/war-core/src/main/webapp/index.html
+++ b/war-core/src/main/webapp/index.html
@@ -27,6 +27,7 @@
 <html>
 <head>
 <title>Redirection sur la page d'identification</title>
+<link REL="SHORTCUT ICON" HREF="util/icons/favicon.ico">
 <SCRIPT LANGUAGE="JavaScript">
                        <!-- Hide from non-JS Aware Browsers
                        function redirige()
