--- a/lib-core/src/test/resources/com/silverpeas/wysiwyg/dynamicvalue/test.html
+++ b/lib-core/src/test/resources/com/silverpeas/wysiwyg/dynamicvalue/test.html
@@ -6,7 +6,7 @@ successfully deployed and run on other Application Servers (such as
 Websphere, Weblogic, ect.). Please find a list of the tools you will
 need to install Silverpeas below.</p>
 <div class="section">
-<h3><a name="#{java_version}" />#{java_version}</h3>
+<h3><a name="(%java_version%)" />(%java_version%)</h3>
 <p>Silverpeas needs a Java SE Development Kit (JDK) at least of
 version 6, which can be downloaded from Sun <a class="externalLink"
 	href="http://java.sun.com/javase/downloads/index.jsp#jdk">here</a>.<br />
@@ -14,7 +14,7 @@ Don't forget to set-up the environment variable <code>%JAVA_HOME%</code>.</p>
 </div>
 <div class="section">
 <h3><a name="Apache_Maven" />Apache Maven</h3>
-<p>Apache Maven #{version}</version> is used in Silverpeas for the building of
+<p>Apache Maven (%version%)</version> is used in Silverpeas for the building of
 components and the assembly. It must be installed on the target
 platform.<br />
 For correct installation, see <a class="externalLink"
