closing support #887, default look JSP are XHTML compliant.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2057 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/admin/jsp/javascript.htm
+++ b/war-core/src/main/webapp/admin/jsp/javascript.htm
@@ -24,11 +24,12 @@
 
 -->
 
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<HTML>
-<HEAD>
-<TITLE> New Document </TITLE>
-<script language="JavaScript1.2">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
+   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<title>New Document</title>
+<script type="text/javascript">
 
 //CBO : ADD
 var impopup;
@@ -203,11 +204,11 @@ var sourceToUpdate='x';
 	}
   }
 </script>
-</HEAD>
+</head>
 
-<BODY BGCOLOR="#FFFFFF">
+<body>
 <form action="" method="post" name="hiddenForm" id="hiddenForm">
-	<input type="hidden" name="domainbarWidth" value="180">
+	<input type="hidden" name="domainbarWidth" value="180"/>
 </form>
-</BODY>
-</HTML>
+</body>
+</html>
