Adding some screenshots

--- a/src/site/resources/screenshots.html
+++ b/src/site/resources/screenshots.html
@@ -53,6 +53,20 @@
               </a>
             </li>
             <li>
+              <h4>Death Metal Quizz</h4>
+              <div class="tn3 description">Skin</div>
+              <a href="images/screenshots/quizz.png">
+                <img src="images/screenshots/quizz.png" />
+              </a>
+            </li>
+            <li>
+              <h4>Death Metal Publication</h4>
+              <div class="tn3 description">Skin</div>
+              <a href="images/screenshots/ged.png">
+                <img src="images/screenshots/ged.png" />
+              </a>
+            </li>
+            <li>
               <h4>Carré</h4>
               <div class="tn3 description">Skin</div>
               <a href="images/screenshots/carre_02.png">  
@@ -106,6 +120,13 @@
               <div class="tn3 description">Skin</div>
               <a href="images/screenshots/passePartout_02.png">
                 <img src="images/screenshots/passePartout_02.png" />
+              </a>
+            </li>
+            <li>
+              <h4>Silverpeas BackOffice</h4>
+              <div class="tn3 description">Skin</div>
+              <a href="images/snapshots/backoffice.png">
+                <img src="images/snapshots/backoffice.png" />
               </a>
             </li>
           </ol>
