Feature #4149 : user account validity - adding action menus to block or unblock users (administration) - adding blocked user management around user log in - adding blocked user management around WEB-Services - adding blocked user management around user blocked whereas a session is alive - formatting the jsp files at webapp root - formatting userContent.jsp file - adjusting some unit tests

--- a/war-core/src/main/webapp/index.html
+++ b/war-core/src/main/webapp/index.html
@@ -24,18 +24,22 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 <head>
-<title>Redirection sur la page d'identification</title>
-<link REL="SHORTCUT ICON" HREF="util/icons/favicon.ico">
-<SCRIPT LANGUAGE="JavaScript">
-                       <!-- Hide from non-JS Aware Browsers
-                       function redirige()
-                       {
-                         window.location="/silverpeas/Login.jsp";
-                       }
-                         -->
-</SCRIPT>
+  <title>Redirection sur la page d'identification</title>
+  <link REL="SHORTCUT ICON" HREF="util/icons/favicon.ico">
+  <SCRIPT LANGUAGE="JavaScript">
+    <!--
+    Hide
+    from
+    non - JS
+    Aware
+    Browsers
+    function redirige() {
+      window.location = "/silverpeas/Login.jsp";
+    }
+    -->
+  </SCRIPT>
 </head>
-<BODY BGCOLOR="#FFFFFF" LINK="#0000FF" VLINK="#800080" TEXT="#000000" onload = redirige() TOPMARGIN=0 LEFTMARGIN=0 MARGINWIDTH=0 MARGINHEIGHT=0>
+<BODY BGCOLOR="#FFFFFF" LINK="#0000FF" VLINK="#800080" TEXT="#000000" onload=redirige() TOPMARGIN=0 LEFTMARGIN=0 MARGINWIDTH=0 MARGINHEIGHT=0>
 
 <a href="/silverpeas/Login.jsp">SILVERPEAS</a>
 
